force-app/main/default/objects/OpportunityLineItem/fields/Areas_of_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Areas_of_Coverage__c</fullName>
    <label>Areas of Coverage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garbage Room</fullName>
            </value>
            <value>
                <fullName>Storage</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Electrical and Mechanical Room</fullName>
            </value>
            <value>
                <fullName>Kitchenettes</fullName>
            </value>
            <value>
                <fullName>Offices</fullName>
            </value>
            <value>
                <fullName>Lunch Room</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Shipping/Receiving</fullName>
            </value>
            <value>
                <fullName>Chute Rooms</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>