force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_Amortization__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Amortization__c</fullName>
    <label>Amortization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>