force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_Capital_Cost__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Capital_Cost__c</fullName>
    <label>Capital Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>