force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_isRecurring__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_isRecurring__c</fullName>
    <description>To flag recurring consumables</description>
    <formula>if( PricebookEntry.Product2.Item_Type__c &lt;&gt; &apos;Service&apos; &amp;&amp;  NOT(ISBLANK(TEXT(Service_Frequency__c))) &amp;&amp;  NOT( ISPICKVAL(Service_Frequency__c,&apos;One-Time&apos;)), true, false)</formula>
    <label>Is Recurring?</label>
    <type>Checkbox</type>
</CustomField>