force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_Last_Approved_Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Last_Approved_Purchase_Price__c</fullName>
    <label>Last Approved Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>