force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_Line_Margin__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Line_Margin__c</fullName>
    <label>Line Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>