force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_Line_Score__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Line_Score__c</fullName>
    <formula>IF( CPQ2_Threshold_Triggered__c  = 0 , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IF ( CPQ2_Threshold_Triggered__c = 1 , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;),
IF ( CPQ2_Threshold_Triggered__c = 2 , IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;),
&quot;&quot;
)
)

)</formula>
    <label>Line Score</label>
    <type>Text</type>
</CustomField>