force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_List_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_List_Price__c</fullName>
    <description>Stamped list price from the current price book</description>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>