force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Material_Cost__c</fullName>
    <description>DO NOT CHANGE, Just noting this field for stamping purposes</description>
    <label>Material Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>