force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_Threshold_Triggered__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Threshold_Triggered__c</fullName>
    <label>Threshold Triggered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>