force-app/main/default/objects/OpportunityLineItem/fields/CPQ2_Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>CPQ2_Total_Costs__c</fullName>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>