force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Amortization__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Amortization__c</fullName>
    <label>**Amortization</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>