force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Annual_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Annual_Material_Cost__c</fullName>
    <formula>CPQ_Material_Cost_Per_Visit__c  *  CPQ_Number_Of_Visits_Per_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Material Cost - Annual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>