force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Capital_Charge__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Capital_Charge__c</fullName>
    <formula>if(CPQ_Amortization__c = 0, 0, CPQ_Capital_Cost__c/ CPQ_Amortization__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Capital Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>