force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Commission_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Commission_Multiplier__c</fullName>
    <description>Can be entered to override the calculated multiplier for special scenarios</description>
    <inlineHelpText>Only to be used for special situations requiring an override of the calculated multiplier</inlineHelpText>
    <label>Commission Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>