force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Commission_Override_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Commission_Override_Frequency__c</fullName>
    <label>Commission Override -  Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>