force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Commission_Override_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Commission_Override_Quantity__c</fullName>
    <label>Commission Override - Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>