force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Commission_Override_Service_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Commission_Override_Service_Price__c</fullName>
    <label>Commission Override - Service Price Per</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>