force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Commission_Status__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Commission_Status__c</fullName>
    <label>Commission Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Commissionable</fullName>
            </value>
            <value>
                <fullName>Unconfirmed</fullName>
                <default>true</default>
                <label>Unconfirmed</label>
            </value>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>