force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Duration_In_Minutes__c</fullName>
    <label>**Duration In Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>