force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Line_Score__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Line_Score__c</fullName>
    <formula>IF(  CPQ_Margin_Percent__c  &gt;= $Setup.CPQ_Settings__c.CPQ_LT1__c , IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green&quot;),
IF ( CPQ_Margin_Percent__c &gt;= $Setup.CPQ_Settings__c.CPQ_LT2__c , IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &quot;Yellow&quot;),
IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Line Score</label>
    <type>Text</type>
</CustomField>