force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Locked_Commission_Date__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Locked_Commission_Date__c</fullName>
    <description>Auto-generated date when commission status was changed to &quot;Locked&quot;</description>
    <label>Locked Commission Date</label>
    <type>DateTime</type>
</CustomField>