force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Margin__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Margin__c</fullName>
    <formula>Total_Annual_Revenue__c -  CPQ_Annual_Material_Cost__c -  CPQ_Annual_Service_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>