force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Margin_Percent__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Margin_Percent__c</fullName>
    <formula>CPQ_Margin__c / IF(Total_Annual_Revenue__c = 0, 1, Total_Annual_Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Margin %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>