force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Material_Cost__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Material_Cost__c</fullName>
    <label>**Material Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>