force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Minutes__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Minutes__c</fullName>
    <formula>CPQ_Duration_In_Minutes__c  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**# Minutes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>