force-app/main/default/objects/OpportunityLineItem/fields/CPQ_More_Info__c.field-meta.xml
<CustomField>
    <fullName>CPQ_More_Info__c</fullName>
    <formula>&quot;Freq: &quot; &amp;   TEXT(Service_Frequency__c)  &amp;  BR() &amp; 
&quot;Service Price/Un: &quot; &amp;  TEXT(Service_Price_Per_Unit__c) &amp;  BR() &amp; 
&quot;Purchase Price/Un: &quot; &amp;   TEXT(Purchase_Price__c)  &amp;  BR() &amp; 
&quot;Install Price/Un: &quot; &amp;    TEXT(Installation_Price__c)   &amp;  BR() &amp; 
&quot;Related Product: &quot; &amp;     Related_Product__c  &amp;  BR() &amp; 
&quot;Total Price: &quot; &amp;  TEXT(Total_Price__c)   &amp;  BR()</formula>
    <label>**More Info</label>
    <type>Text</type>
</CustomField>