force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Number_Of_Visits_Per_Year__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Number_Of_Visits_Per_Year__c</fullName>
    <label>**Number Of Visits Per Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>