force-app/main/default/objects/OpportunityLineItem/fields/CPQ_of_List__c.field-meta.xml
<CustomField>
    <fullName>CPQ_of_List__c</fullName>
    <formula>Service_Price_Per_Unit__c / ListPrice</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**% of List</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>