force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Original_Frequency__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Original_Frequency__c</fullName>
    <inlineHelpText>Stores original value if a commission override was entered</inlineHelpText>
    <label>Original Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>