force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Original_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Original_Quantity__c</fullName>
    <inlineHelpText>Stores original value if a commission override was entered</inlineHelpText>
    <label>Original Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>