force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Original_Service_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Original_Service_Price_Per_Unit__c</fullName>
    <inlineHelpText>Stores original value if a commission override was entered</inlineHelpText>
    <label>Original Service Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>