force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Percentage_of_Total__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Percentage_of_Total__c</fullName>
    <formula>if(   CPQ_Price_Model__c   = &apos;Hygiene Pricing Model&apos;,  Total_Annual_Revenue__c /IF(Opportunity.CPQ_THARR__c = 0,1, Opportunity.CPQ_THARR__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**% of Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>