force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Price_Model__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Price_Model__c</fullName>
    <label>Price Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>