force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Service_Cost_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Service_Cost_Per_Unit__c</fullName>
    <formula>CPQ_Average_Cost_Minute__c * CPQ_Duration_In_Minutes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Service Cost - Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>