force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Service_Cost_Per_Visit__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Service_Cost_Per_Visit__c</fullName>
    <formula>CPQ_Service_Cost_Per_Unit__c  *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Service Cost - Per Visit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>