force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Stamp_Totals__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Stamp_Totals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>**Stamp Totals</label>
    <type>Checkbox</type>
</CustomField>