force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Stamped_ARR_List_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Stamped_ARR_List_Price__c</fullName>
    <label>**Stamped ARR - List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>