force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Stamped_Costs__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Stamped_Costs__c</fullName>
    <label>**Stamped Annual Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>