force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Total_Annual_Cost__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Total_Annual_Cost__c</fullName>
    <formula>CPQ_Annual_Service_Cost__c +  CPQ_Annual_Material_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Total Annual Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>