force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Total_Annual_Revenue_List_Price__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Total_Annual_Revenue_List_Price__c</fullName>
    <formula>CPQ_Number_Of_Visits_Per_Year__c *  ListPrice * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Total Annual Revenue - List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>