force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Total_Capital_Charge__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Total_Capital_Charge__c</fullName>
    <formula>CPQ_Capital_Charge__c *  Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Total Capital Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>