force-app/main/default/objects/OpportunityLineItem/fields/CPQ_Total_Cost_Per_Visit__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Total_Cost_Per_Visit__c</fullName>
    <formula>CPQ_Service_Cost_Per_Visit__c +  CPQ_Material_Cost_Per_Visit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>**Total Cost Per Visit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>