force-app/main/default/objects/OpportunityLineItem/fields/Installation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Installation_Notes__c</fullName>
    <label>Installation Notes</label>
    <type>TextArea</type>
</CustomField>