force-app/main/default/objects/OpportunityLineItem/fields/Installation_Status__c.field-meta.xml
<CustomField>
    <fullName>Installation_Status__c</fullName>
    <inlineHelpText>Indicate if this is a new Asset Install, Removing(for seasonality purposes), Replacing(an old asset is replaced with a new one)</inlineHelpText>
    <label>Installation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Install</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Remove</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>