force-app/main/default/objects/OpportunityLineItem/fields/isConverted__c.field-meta.xml
<CustomField>
    <fullName>isConverted__c</fullName>
    <formula>Opportunity.isConverted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isConverted</label>
    <type>Checkbox</type>
</CustomField>