force-app/main/default/objects/OpportunityLineItem/fields/isPurchaseOnly__c.field-meta.xml
<CustomField>
    <fullName>isPurchaseOnly__c</fullName>
    <formula>NOT( ISBLANK( Purchase_Price__c ) ) &amp;&amp; ISBLANK( Service_Price_Per_Unit__c )  &amp;&amp;  ISBLANK( Installation_Price__c )</formula>
    <label>isPurchaseOnly</label>
    <type>Checkbox</type>
</CustomField>