force-app/main/default/objects/OpportunityLineItem/fields/Item_Type__c.field-meta.xml
<CustomField>
    <fullName>Item_Type__c</fullName>
    <formula>PricebookEntry.Product2.Item_Type__c</formula>
    <label>Item Type</label>
    <type>Text</type>
</CustomField>