force-app/main/default/objects/OpportunityLineItem/fields/Opportunity_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Record_Type__c</fullName>
    <formula>CASESAFEID( Opportunity.RecordTypeId )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Record Type</label>
    <type>Text</type>
</CustomField>