force-app/main/default/objects/OpportunityLineItem/fields/Product_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit__c</fullName>
    <formula>TEXT(PricebookEntry.Product2.Unit__c)</formula>
    <label>Unit</label>
    <type>Text</type>
</CustomField>