force-app/main/default/objects/OpportunityLineItem/fields/Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Price__c</fullName>
    <inlineHelpText>Indicate if the Customer is charged a Price for the Purchase of this item. Price Entered is per unit. If only Purchase Price is filled in, this would be considered as a One Time Delivery.</inlineHelpText>
    <label>Purchase Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>