force-app/main/default/objects/OpportunityLineItem/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>&quot;Related Product : Active = true</errorMessage>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunity Product</relationshipLabel>
    <relationshipName>Opportunity_Product</relationshipName>
    <type>Lookup</type>
</CustomField>