force-app/main/default/objects/OpportunityLineItem/fields/Service_Frequency_FR__c.field-meta.xml
<CustomField>
    <fullName>Service_Frequency_FR__c</fullName>
    <description>https://trello.com/c/c2atHJQu/943-can-remove-quotes-object-and-consolidate-agreement-at-opportunity</description>
    <formula>IF(
AND(
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1&quot;),
ISPICKVAL(Service_Frequency__c, &quot;28 Days&quot;),
OR(
CONTAINS(PricebookEntry.Product2.Name, &quot;Arom&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;EcoAire&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;FreshAire&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;EcoClean&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;Anti-Splash&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;AutoFlush Combo&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;Urinal Mat&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;Ultraire&quot;))),
&quot;(Fort)&quot;,

IF(
AND(
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1&quot;),
ISPICKVAL(Service_Frequency__c, &quot;56 Days&quot;),
OR(
CONTAINS(PricebookEntry.Product2.Name, &quot;Arom&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;EcoAire&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;FreshAire&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;EcoClean&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;Anti-Splash&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;AutoFlush Combo&quot;),
CONTAINS(PricebookEntry.Product2.Name, &quot;Urinal Mat&quot;))),
&quot;(Régulier)&quot;,

IF(
AND(
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1&quot;),
OR(
ISPICKVAL(Service_Frequency__c, &quot;120 Days&quot;),
ISPICKVAL(Service_Frequency__c, &quot;56 Days&quot;)),
CONTAINS(PricebookEntry.Product2.Name, &quot;Ultraire&quot;)),
&quot;(Régulier)&quot;,
IF(
AND(
OR(
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-04-40&quot;),
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-04-41&quot;),
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-04-42&quot;)),
ISPICKVAL(Service_Frequency__c, &quot;182 Days&quot;)),
&quot;&quot;,
IF(
AND(
OR(
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-04-71&quot;),
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-04-72&quot;),
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-04-73&quot;),
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-08-01&quot;),
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-08-02&quot;),
BEGINS(PricebookEntry.Product2.ProductCode, &quot;1-08-03&quot;)),
ISPICKVAL(Service_Frequency__c, &quot;Annually&quot;)),
&quot;&quot;,
&quot;(&quot;&amp;CASE(TEXT(Service_Frequency__c) ,
&quot;One-Time&quot;, &quot;service unique&quot;,
&quot;Daily&quot;, &quot;quotidien&quot;,
&quot;6X Per Week&quot;, &quot;6x par semaine&quot;,
&quot;5X Per Week&quot;, &quot;5x par semaine&quot;,
&quot;4X Per Week&quot;, &quot;4x par semaine &quot;,
&quot;3X Per Week&quot;, &quot;3x par semaine &quot;,
&quot;2X Per Week&quot;, &quot;2x par semaine &quot;,
&quot;Weekly&quot;,&quot;hebdomadaire&quot;,
&quot;Fixed Weekly&quot;, &quot;service hebdomadaire à date fixe&quot;,
&quot;14 Days&quot;, &quot;14 jours&quot;,
&quot;Twice Monthly&quot;, &quot;deux fois par mois&quot;,
&quot;28 Days&quot;, &quot;28 jours&quot;,
&quot;Monthly&quot;, &quot;mensuel&quot;,
&quot;42 Days&quot;, &quot;42 jours&quot;,
&quot;56 Days&quot;, &quot;56 jours&quot;,
&quot;Bi-Monthly&quot;, &quot;aux 2 mois&quot;,
&quot;84 Days&quot;, &quot;84 jours&quot;,
&quot;Quarterly&quot;, &quot;trimestriel&quot;,
&quot;112 Days&quot;, &quot;112 jours&quot;,
&quot;120 Days&quot;, &quot;120 jours&quot;,
&quot;168 Days&quot;, &quot;168 jours&quot;,
&quot;Semi-Annually&quot;, &quot;semi-annuelle&quot;,
&quot;2X Per Year&quot;, &quot;2x par année&quot;,
&quot;182 Days&quot;, &quot;182 jours&quot;,
&quot;Annually&quot;, &quot;annuelle&quot;,
&quot;&quot;)&amp;&quot;)&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Frequency FR</label>
    <type>Text</type>
</CustomField>